unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Primary_State__c.field-meta.xml
<CustomField>
    <fullName>Primary_State__c</fullName>
    <formula>Account__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary State</label>
    <type>Text</type>
</CustomField>