unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Prioritize_for_Consider_Mes__c.field-meta.xml
<CustomField>
    <fullName>Prioritize_for_Consider_Mes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box triggers the blue star on Engagement List for low interest fellowships.</description>
    <inlineHelpText>Checking this box triggers the blue star on Engagement List for low interest fellowships.</inlineHelpText>
    <label>Prioritize for Consider Mes</label>
    <type>Checkbox</type>
</CustomField>