unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Private_Vehicle_Required__c.field-meta.xml
<CustomField>
    <fullName>Private_Vehicle_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fellow will need access to a car to complete this fellowship.</description>
    <inlineHelpText>Fellow will need access to a car to complete this fellowship.</inlineHelpText>
    <label>Private Vehicle Required</label>
    <type>Checkbox</type>
</CustomField>