unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Project_CategoryHA__c.field-meta.xml
<CustomField>
    <fullName>Project_CategoryHA__c</fullName>
    <description>Shows on engagement list. Populated via form assembly.</description>
    <inlineHelpText>Shows on engagement list. From host application.</inlineHelpText>
    <label>Project Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Animal Agriculture</fullName>
            </value>
            <value>
                <fullName>Climate Commitments</fullName>
                <label>Climate Commitments and Roadmaps</label>
            </value>
            <value>
                <fullName>Climate Smart Agriculture</fullName>
            </value>
            <value>
                <fullName>Energy &amp; Waste Management</fullName>
            </value>
            <value>
                <fullName>Environmental/Climate Justice</fullName>
                <label>Environmental and Climate Justice</label>
            </value>
            <value>
                <fullName>Food Waste</fullName>
            </value>
            <value>
                <fullName>Food Waste &amp; Animal Agriculture</fullName>
            </value>
            <value>
                <fullName>GHG Accounting, Reporting, and Goal Setting</fullName>
            </value>
            <value>
                <fullName>Renewables &amp; Energy Efficiency</fullName>
            </value>
            <value>
                <fullName>Supplier Engagement and Scope 3</fullName>
            </value>
            <value>
                <fullName>Supply Chain and Freight Sustainability</fullName>
            </value>
            <value>
                <fullName>Supply Chain Sustainability</fullName>
            </value>
            <value>
                <fullName>Sustainable Construction</fullName>
            </value>
            <value>
                <fullName>Sustainable Finance</fullName>
            </value>
            <value>
                <fullName>Zero-Emission Vehicles/Fleet Transition</fullName>
                <label>Zero-Emission Vehicles and Fleet Transition</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>