unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Project_Database_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Project_Database_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox is checked when the Final Deliverables are Submitted</description>
    <inlineHelpText>checkbox is checked when the Final Deliverables are Submitted</inlineHelpText>
    <label>Project Database Submitted</label>
    <type>Checkbox</type>
</CustomField>