unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/ProjectSolutions__c.field-meta.xml
<CustomField>
    <fullName>ProjectSolutions__c</fullName>
    <inlineHelpText>Describe the solutions that you arrived at including any obstacles you overcame.</inlineHelpText>
    <label>Project Solutions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>