unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Proposed_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_End_Date__c</fullName>
    <description>Populated via form assembly</description>
    <inlineHelpText>From host application</inlineHelpText>
    <label>Proposed End Date</label>
    <type>Date</type>
</CustomField>