unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Proposed_Fellowship_Dates__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Fellowship_Dates__c</fullName>
    <label>Proposed Fellowship Dates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>