unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Proposed_Fellowship_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Fellowship_End_Date__c</fullName>
    <formula>Host_Application__r.Proposed_Fellowship_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposed Fellowship End Date</label>
    <type>Date</type>
</CustomField>