unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Was this organization referred to us through another company or organization?</inlineHelpText>
    <label>Referral</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Climate Corps Engagements (Referral)</relationshipLabel>
    <relationshipName>Climate_Corps_Engagements2</relationshipName>
    <type>Lookup</type>
</CustomField>