unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Registered_for_Training__c.field-meta.xml
<CustomField>
    <fullName>Registered_for_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggered by a change to Done/Not Done slider on the "Register for training" tile in the Deliverables Tracker section of the fellow portal</description>
    <inlineHelpText>Automatically updates when the fellow updates the Done/Not Done slider on the "Register for training" tile on the Deliverables Tracker page in the fellow portal</inlineHelpText>
    <label>Registered for Training</label>
    <type>Checkbox</type>
</CustomField>