unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Reimbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Amount__c</fullName>
    <description>For EDF-Funded hosts</description>
    <inlineHelpText>For EDF-Funded hosts</inlineHelpText>
    <label>Reimbursement Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>