unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Rejected__c.field-meta.xml
<CustomField>
    <fullName>Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if Host is Rejected - This is used for the Rejected Email flow.</description>
    <inlineHelpText>Check if Host is Rejected</inlineHelpText>
    <label>Rejected</label>
    <type>Checkbox</type>
</CustomField>