unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Rejection_Email_Templet__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Email_Templet__c</fullName>
    <description>Picklist to select which rejection email to send Via flow.</description>
    <inlineHelpText>Please select a Rejection Email Templet.</inlineHelpText>
    <label>Rejection Email Templet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected EDF Funded Email</fullName>
            </value>
            <value>
                <fullName>Rejected Host Funded Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>