unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Relocation_Add_t_Info__c.field-meta.xml
<CustomField>
    <fullName>Relocation_Add_t_Info__c</fullName>
    <description>If host provides other relocation assistance not available from multiselect picklist. FormAssembly Q.</description>
    <inlineHelpText>If host provides other relocation assistance not available from multiselect picklist</inlineHelpText>
    <label>Relocation Add't Info</label>
    <type>TextArea</type>
</CustomField>