unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Remaining_Deliverables_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Deliverables_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox is checked when the Remaining_Deliverables are submitted</description>
    <inlineHelpText>checkbox is checked when the Remaining_Deliverables are submitted</inlineHelpText>
    <label>Remaining Deliverables Submitted</label>
    <type>Checkbox</type>
</CustomField>