unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Requested_Mentor__c.field-meta.xml
<CustomField>
    <fullName>Requested_Mentor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggered by a change to Done/Not Done slider on the "Sign up for a Mentor" tile in the Deliverables Tracker section of the fellow portal</description>
    <inlineHelpText>Automatically updates when the fellow updates the Done/Not Done slider on the "Sign up for a Mentor" tile on the Deliverables Tracker page in the fellow portal</inlineHelpText>
    <label>Requested Mentor</label>
    <type>Checkbox</type>
</CustomField>