unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Require_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Require_Authorization__c</fullName>
    <formula>TEXT(Fellow_Application__r.Are_you_eligible_to_work_in_U_S_in_summ__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Require Authorization</label>
    <type>Text</type>
</CustomField>