unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Respondent_Name__c.field-meta.xml
<CustomField>
    <fullName>Respondent_Name__c</fullName>
    <description>Name of individual who completed host application</description>
    <inlineHelpText>Name of individual who completed host application</inlineHelpText>
    <label>Respondent Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>