unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Respondent_Title__c.field-meta.xml
<CustomField>
    <fullName>Respondent_Title__c</fullName>
    <inlineHelpText>Title of respondent</inlineHelpText>
    <label>Respondent Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>