unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Reviewed_HR_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_HR_Webinar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggered by a change to Done/Not Done slider on the "EDF paid fellows watch HR webinar" tile in the Deliverables Tracker section of the fellow portal.</description>
    <inlineHelpText>Automatically updates when the fellow updates the Done/Not Done slider on the "EDF paid fellows watch HR webinar" tile on the Deliverables Tracker page in the fellow portal. Only applies for EDF-paid fellows.</inlineHelpText>
    <label>Reviewed HR Webinar</label>
    <type>Checkbox</type>
</CustomField>