unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Reviewed_Work_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Work_Authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggered by a change to Done/Not Done slider on the "International Students Read Work Authorization Policy" tile in the Deliverables Tracker section of the fellow portal</description>
    <inlineHelpText>Automatically updates when the fellow updates the Done/Not Done slider on the "International Students Read Work Authorization Policy" tile on the Deliverables Tracker page in the fellow portal</inlineHelpText>
    <label>Reviewed Work Authorization</label>
    <type>Checkbox</type>
</CustomField>