unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/SolutionsPotentialImpact__c.field-meta.xml
<CustomField>
    <fullName>SolutionsPotentialImpact__c</fullName>
    <inlineHelpText>Describe the potential impact of your solutions and recommendations given to your host.</inlineHelpText>
    <label>Solutions Potential Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>