unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <inlineHelpText>Lead - Cold lead, not yet responded
Contact - Contact responded, open to learning more
Interested - Contact interested, not convinced
Readied - Wants to participate
Committed - Verbally
Confirmed - Signed app
Special consideration - see notes</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Readied</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>Application Submitted</fullName>
            </value>
            <value>
                <fullName>Confirmed Participation</fullName>
            </value>
            <value>
                <fullName>Match Conversation Complete</fullName>
            </value>
            <value>
                <fullName>Customized - Host Recruits Fellow(s)</fullName>
            </value>
            <value>
                <fullName>Offer Sent</fullName>
            </value>
            <value>
                <fullName>Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Onboarding Conversation In Progress</fullName>
            </value>
            <value>
                <fullName>Onboarding Conversation Complete</fullName>
            </value>
            <value>
                <fullName>Engagement Confirmed</fullName>
            </value>
            <value>
                <fullName>Onboarding Conversation Not Accepted</fullName>
            </value>
            <value>
                <fullName>Final Deliverables Received</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Gib is recruiting</fullName>
            </value>
            <value>
                <fullName>Austin is recruiting</fullName>
            </value>
            <value>
                <fullName>Special Consideration (see notes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>