unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Star__c.field-meta.xml
<CustomField>
    <fullName>Star__c</fullName>
    <description>What star should be visible on Fellow Portal for this Engagement.</description>
    <formula>IF (Number_Of_Consider_Me__c &gt; 20, 
    "GOLD",  
    IF ( Competitive_Host_Location__c = TRUE, 
        "GOLD",  
        IF (Prioritize_for_Consider_Mes__c = TRUE, 
            "BLUE", 
            ""
        )
    )
)</formula>
    <label>Star</label>
    <type>Text</type>
</CustomField>