unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Start_Date_Approval__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Approval__c</fullName>
    <label>Start Date Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>