unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/State_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>State_Restrictions__c</fullName>
    <description>Fellow must reside in certain states. FormAssembly Q.</description>
    <inlineHelpText>Fellow must reside in certain states</inlineHelpText>
    <label>State Restrictions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>