unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Stipend_Amount__c.field-meta.xml
<CustomField>
    <fullName>Stipend_Amount__c</fullName>
    <description>Dependent on relocation assistance question</description>
    <inlineHelpText>Dependent on relocation assistance question</inlineHelpText>
    <label>Stipend Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>