unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Strategic_Value_Notes__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Value_Notes__c</fullName>
    <inlineHelpText>Please capture CPP and/or Clean Energy Alignments</inlineHelpText>
    <label>Strategic Value Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>