unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Submit_Final_Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Submit_Final_Deliverables__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggered by a change to Done/Not Done slider on the "Submit Final Deliverables" tile in the Deliverables Tracker section of the fellow portal</description>
    <inlineHelpText>Automatically updates when the fellow updates the Done/Not Done slider on the "Submit Final Deliverables" tile on the Deliverables Tracker page in the fellow portal</inlineHelpText>
    <label>Submit Final Deliverables</label>
    <type>Checkbox</type>
</CustomField>