unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Submit_Start_End_dates__c.field-meta.xml
<CustomField>
    <fullName>Submit_Start_End_dates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggered by a change to Done/Not Done slider on the "Submit Start and End dates" tile in the Deliverables Tracker section of the fellow portal</description>
    <inlineHelpText>Automatically updates when the fellow updates the Done/Not Done slider on the "Submit Start and End dates" tile on the Deliverables Tracker page in the fellow portal</inlineHelpText>
    <label>Submit Start &amp; End dates</label>
    <type>Checkbox</type>
</CustomField>