unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Supervisor2__c.field-meta.xml
<CustomField>
    <fullName>Supervisor2__c</fullName>
    <formula>Supervisor__r.FirstName+" "+Supervisor__r.LastName</formula>
    <label>Direct Supervisor</label>
    <type>Text</type>
</CustomField>