unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Direct Supervisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Climate Corps Engagements (Supervisor)</relationshipLabel>
    <relationshipName>Climate_Corps_Fellows</relationshipName>
    <type>Lookup</type>
</CustomField>