unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Supervisor_HA__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_HA__c</fullName>
    <formula>Host_Application__r.Supervisor__r.FirstName  &amp;  " "  &amp;  Host_Application__r.Supervisor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Supervisor</label>
    <type>Text</type>
</CustomField>