unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Supervisor_Title_HA__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Title_HA__c</fullName>
    <formula>Host_Application__r.Direct_Supervisor_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Supervisor Title</label>
    <type>Text</type>
</CustomField>