unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Training_Info_Survey__c.field-meta.xml
<CustomField>
    <fullName>Training_Info_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggered by a change to Done/Not Done slider on the "Complete Pre-Training Items" tile in the Deliverables Tracker section of the fellow portal</description>
    <inlineHelpText>Automatically updates when the fellow updates the Done/Not Done slider on the "Complete Pre-Training Items" tile on the Deliverables Tracker page in the fellow portal</inlineHelpText>
    <label>Training Info &amp; Survey</label>
    <type>Checkbox</type>
</CustomField>