unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Travel_Arrangements_To_Training_Event__c.field-meta.xml
<CustomField>
    <fullName>Travel_Arrangements_To_Training_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel arrangements to Training event</label>
    <type>Checkbox</type>
</CustomField>