unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Upload_Category__c.field-meta.xml
<CustomField>
    <fullName>Upload_Category__c</fullName>
    <label>Upload Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fellowship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>