unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/When_Will_This_Stipend_Be_Administered__c.field-meta.xml
<CustomField>
    <fullName>When_Will_This_Stipend_Be_Administered__c</fullName>
    <label>When Will This Stipend Be Administered?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>How_Are_You_Paying_For_Training__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediately after training week</fullName>
            </value>
            <value>
                <fullName>With the next paycheck</fullName>
            </value>
            <value>
                <fullName>Other (Comment box)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>