unpackaged/main/default/objects/Climate_Corps_Engagement__c/fields/Which_Holidays_Will_Be_Paid__c.field-meta.xml
<CustomField>
    <fullName>Which_Holidays_Will_Be_Paid__c</fullName>
    <description>Assuming the fellow is employed by the host at the time of these holidays, which of the following holidays will be paid (check all that apply)?</description>
    <label>Which Holidays Will Be Paid?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Memorial Day</fullName>
            </value>
            <value>
                <fullName>Juneteenth</fullName>
            </value>
            <value>
                <fullName>Fourth of July</fullName>
            </value>
            <value>
                <fullName>Labor Day</fullName>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>